# exercises

./: .gitignore  .travis.yml  Makefile  README.md
.github/workflows/: rust.yml
exercises/: Cargo.toml
exercises/factorial/src/: lib.rs
exercises/fibonacci-sequence/: Cargo.toml
exercises/fibonacci-sequence/src/: lib.rs
exercises/hello-world/: Cargo.toml  README.md
exercises/leap/: Cargo.toml  README.md
exercises/tests/: factorial.rs  fibonacci-sequence.rs  hello-world.rs  leap.rs
factorial/: Cargo.toml
factorial/src/: lib.rs
scripts/: test.sh  update.sh
