[package]
name = "exercises"
version = "0.1.0"
authors = ["ilya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello-world = { path = "./hello-world" }
factorial = { path = "./factorial" }
fibonacci-sequence = { path = "./fibonacci-sequence" }